Clear button works

--- a/Lab2/Lab2/Views/Home/Index.cshtml
+++ b/Lab2/Lab2/Views/Home/Index.cshtml
@@ -28,6 +28,6 @@
 
     <div>
         <button type="submit">Calculator</button>
-        <a>Clear</a>
+        <a asp-action="Index">Clear</a>
     </div>
 </form>
